# jobs_manager

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Bugs.md  CLAUDE.md  README.md  TODO.md  backup_db.py  copy-node-assets-to-django.js  core_data_backup.sql  drive_storage_check.py  file_interaction.mermaid  import_quote_guide.md  job_migration_map.md  job_migration_tutorial.md  load_csv.py  manage.py  migration.md  mypy.ini  nohup.out  otimizacao_js_contatos_relatorio.md  package-lock.json  package.json  purchase_order_pdf_service_report.md  purchases-implementation-plan.md  pyproject.toml  references_finder.py  resumo_e_otimizacoes.md  simple_drive_test.py  sistema-gerenciamento-trabalhos-guia.md  supplier_document_to_po_design.md  test_google_drive.py  test_migration.py  test_quote_parsing.py  test_template_access.py  tox.ini  unchanged_files.txt  update_init.py
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  django.yml
accounts/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/views/: __init__.py  staff_views.py
adhoc/: backup_db.py  debug_xero_serialization.py  deploy_app.sh  deploy_release.sh  ims_employee_list_to_fixture.py  mistral_parsing.py  ocr_results.json  ocr_results.md  test_pdf_parsing.py  update_init.py  xero-sync.service
apps/accounting/: __init__.py  enums.py  services.py  urls.py  utils.py
apps/accounts/: admin.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  utils.py
apps/client/: forms.py  models.py  serializers.py  urls.py  urls_rest.py  views.py
apps/job/: admin.py  diff.py  enums.py  helpers.py  mixins.py  urls.py  urls_rest.py  utils.py
apps/purchasing/: admin.py  apps.py  forms.py  models.py  urls.py  urls_rest.py  views.py
apps/quoting/: apps.py  mcp.py  models.py  scheduler_jobs.py  serializers_django_jobs.py  signals.py  urls.py  utils.py  views.py  views_django_jobs.py
apps/timesheet/: api_urls.py  apps.py  enums.py  forms.py  models.py  serializers.py  urls.py  utils.py
apps/workflow/: __init__.py  admin.py  apps.py  authentication.py  context_processors.py  enums.py  exceptions.py  filters.py  forms.py  helpers.py  middleware.py  notes_on_timesheets.md  scheduler_jobs.py  serializers.py  tables.py  tests.py  urls.py  utils.py  xero_views.py  xero_webhooks.py
client/: forms.py  models.py  serializers.py  urls.py  views.py
client/migrations/: 0001_initial.py
docs/: README.md  design_system.html  file_interaction.mermaid  initial_install.md  ui-design-system.html  updating.md
docs/api/: month_end_api.md  xero_integration.md
docs/plans/: Priorities  backflow_mapping_plan.md  chatbot_backend_plan.md  fix-timeentry-jobpricing-relationship.md  fixup_product_mapping_plan.md  include_validated_mappings_plan.md  item_in_xero_plan.md  job_quote_chat_plan.md  linked_quote_implementation_plan.md  linting_fixes_needed.txt  linting_plan.md  mcp.md  product_mapping_plan.md  product_signal_refactor_plan.md  xero_quantity_on_hand_fix_plan.md
docs/purchasing/: rest_api.md
docs/test_plans/: client_contact_management_test_plan.md
docs/urls/: README.md
docs/views/: DashboardView.md
job/: admin.py  enums.py  helpers.py  tests.py  urls.py
job/migrations/: 0001_initial.py  0002_alter_historicaljob_pricing_type_and_more.py  0003_historicaljob_contact_email_job_contact_email.py  0003_historicaljob_linked_quote_job_linked_quote.py  0004_alter_historicaljob_contact_phone_and_more.py  0004_part_adjustmententry_part_materialentry_part.py  0006_add_material_adjustment_jobpart_models.py  0007_alter_jobpart_options_and_more.py  0007_create_default_parts.py  0007_fix_jobpart_state.py  0008_alter_jobpart_options_and_more.py  0008_rename_pricing_type_historicaljob_pricing_methodology_and_more.py  0009_alter_historicaljob_pricing_methodology_and_more.py  0010_jobpricing_default_part.py  0011_remove_entry_job_pricing_fields.py
job/models/: __init__.py  adjustment_entry.py  job.py  job_event.py  job_file.py  job_part.py  job_pricing.py  material_entry.py  part.py
job/serializers/: __init__.py  adjustment_entry_serializer.py  job_file_serializer.py  job_pricing_serializer.py  job_serializer.py  material_entry_serializer.py  part_serializer.py
job/services/: file_service.py  job_service.py
job/views/: archive_completed_jobs_view.py  edit_job_view_ajax.py  job_file_upload.py  job_file_view.py  job_management_view.py  kanban_view.py  workshop_view.py
jobs_manager/: __init__.py  asgi.py  authentication.py  celery.py  settings.py  urls.py  wsgi.py
jobs_manager/settings/: __init__.py  base.py  cache.py  local.py  production.py  production_like.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
quoting/: apps.py  models.py  urls.py
quoting/migrations/: 0002_supplierpricelist_supplierproduct_price_list.py  0003_alter_supplierpricelist_supplier_and_more.py
quoting/scrapers/: base.py  steel_and_tube.py
quoting/services/: gemini_price_list_extraction.py
scripts/: anonymize_staff.py  backup_db.sh  cleanup_backups.py  cleanup_backups.sh  create_master_template.py  create_password.py  deploy_app.sh  deploy_release.sh  get_gapi_token.py  import_supplier_products_one_off.py  reset_database.sql  rollback_release.sh  test_kpi_service.py  update_init.py  xero-sync.service
timesheet/: forms.py  models.py  serializers.py  urls.py
timesheet/migrations/: 0001_initial.py  0002_alter_timeentry_job_pricing_fk.py  0003_timeentry_part.py  0004_remove_timeentry_job_pricing.py  0005_alter_timeentry_part.py
timesheet/views/: __init__.py  time_entry_view.py  time_overview_view.py
workflow/: admin.py  apps.py  enums.py  filters.py  forms.py  helpers.py  middleware.py  models.py  serializers.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
workflow/api/: enums.py  server.py
workflow/fixtures/: company_defaults_fixture.json  initial_data.json  logins.json  staff.json  staff_fixture.json
(+1175 files in other folders)
