[tool.poetry]
name = "jobs-manager"
version = "0.1.0"
description = "Django app for managing quotes and jobs"
authors = ["Corrin Lakeland <corrin.lakeland@cmeconnect.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-encrypted-model-fields = "^0.6.5"
#django-xero = "^0.0.3"
django-simple-history = "^3.7.0"
pytz = "^2024.1"
python-dotenv = "^1.0.1"
xero-python = "^6.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.11.2"
pylint = "^3.2.7"
tox = "^4.18.1"
django-stubs = "^5.0.4"
mypy-extensions = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
exclude = '\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist|migrations'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "./"
exclude = "migrations|__pycache__|.tox|venv"

# pylint configuration
[tool.pylint]
max-line-length = 88
ignore = ["migrations", "__pycache__", "site-packages", ".tox"]
